also increase memory for jenkins build
Signed-off-by: Juergen Rose <juergen.rose@ibh-systems.com>